--- a/index.html
+++ b/index.html
@@ -7,3 +7,233 @@
 
 
 </head>
+
+<body>
+
+  <header class="flex justify-center px-2 py-2 border-solid border-gray-200 border-b-2">
+    <div class="relative">
+      <div class="absolute inset-y-0 left-0 flex items-center pl-4">
+        <svg class="w-4 fill-current text-gray-800" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          viewBox="0 0 373.12 373.12" style="enable-background:new 0 0 373.12 373.12;" xml:space="preserve">
+          <g>
+            <path d="M266.667,234.667h-16.96l-5.867-5.867c20.907-24.213,33.493-55.68,33.493-90.133C277.333,62.08,215.253,0,138.667,0
+              S0,62.08,0,138.667s62.08,138.667,138.667,138.667c34.453,0,65.92-12.587,90.133-33.387l5.867,5.867v16.853L341.333,373.12
+              l31.787-31.787L266.667,234.667z M138.667,234.667c-53.013,0-96-42.987-96-96c0-53.013,42.987-96,96-96c53.013,0,96,42.987,96,96
+              C234.667,191.68,191.68,234.667,138.667,234.667z"/>
+          </g>
+        </svg>
+      </div>
+      <input class="pl-3 py-2 rounded-3xl placeholder-gray-500 text-center border-solid border-gray-300 border-2 border-opacity-40 shadow-sm focus:outline-none" placeholder="Recherchez des logements">
+    </div>
+  </header>
+
+
+
+  <section class="py-6 ml-6 mr-14 border-solid border-gray-200 border-b-2">
+
+    <span class="text-sm text-gray-700">+ de 300 séjours</span>
+    <h1 class="pt-1 text-2xl font-bold text-gray-800">Séjours dans le monde entier</h1>
+    <div class="pt-7 -mx-1">
+      <button class="px-3 py-1 text-sm text-gray-800 rounded-3xl border-solid border-gray-800 border-2 text-opacity-85">Filtres &bull; 2</button>
+    </div>
+    <p class="pt-6 text-gray-500 text-xs tracking-wide">Saisissez les dates et le nombre de voyageurs pour voir le prix total par nuit.</p>
+
+  </section>
+  <div class="pt-1 ml-6 mr-14">
+    <span class="text-sm text-gray-900 text-opacity-80">Classement par ordre de pertinence</span>
+
+  </div>
+
+  <main class="pt-8 ml-6 mr-14 grid gap-9 grid-cols-1">
+    <div>
+      <div class="relative">
+        <span class="absolute top-2 left-2 px-2 py-1 bg-white font-black text-xs text-gray-900 text-opacity-80 rounded shadow-lg">SUPERHOST</span>
+        <svg class="absolute top-2 right-2 w-6 fill-current text-gray-700"xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+        </svg>
+        <img  class="rounded-xl shadow-lg" src="https://a0.muscache.com/im/pictures/ea38da34-7082-45a6-895f-dd87019064ee.jpg?im_w=320" alt="">
+      </div>
+      <div>
+        <div class="flex pt-2">
+          <svg class="fill-current text-red-500 w-5"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+          </svg>
+          <span class="px-1 text-gray-800">4,98</span>
+          <span class="text-gray-500 text-opacity-80">(109)</span>
+        </div>
+        <span class="text-gray-800 tracking-tight">Cabane dans les arbres &bull; Le Chemin Cabane de l'Etang Millet</span>
+      </div>
+    </div>
+
+    <div>
+      <div class="relative">
+        <span class="absolute top-2 left-2 px-2 py-1 bg-white font-black text-xs text-gray-900 text-opacity-80 rounded shadow-lg">SUPERHOST</span>
+        <svg class="absolute top-2 right-2 w-6 fill-current text-gray-700"xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+        </svg>
+        <img  class="rounded-xl shadow-lg" src="https://a0.muscache.com/im/pictures/874aac83-43c6-49e2-bacb-e6ae4146d5b1.jpg?im_w=320" alt="">
+      </div>
+      <div>
+        <div class="flex pt-2">
+          <svg class="fill-current text-red-500 w-5"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+          </svg>
+          <span class="px-1 text-gray-800">4,85</span>
+          <span class="text-gray-500 text-opacity-80">(26)</span>
+        </div>
+        <span class="text-gray-800 tracking-tight">Cabane dans les arbres &bull; Saint-Constant Dôme dans les arbres au bord du ruisseau</span>
+      </div>
+    </div>
+
+    <div>
+      <div class="relative">
+        <span class="absolute top-2 left-2 px-2 py-1 bg-white font-black text-xs text-gray-900 text-opacity-80 rounded shadow-lg">SUPERHOST</span>
+        <svg class="absolute top-2 right-2 w-6 fill-current text-gray-700"xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+        </svg>
+        <img  class="rounded-xl shadow-lg" src="https://a0.muscache.com/im/pictures/a476b446-889c-4ebb-b559-33dadfa4dbbb.jpg?im_w=320" alt="">
+      </div>
+      <div>
+        <div class="flex pt-2">
+          <svg class="fill-current text-red-500 w-5"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+          </svg>
+          <span class="px-1 text-gray-800">5,0</span>
+          <span class="text-gray-500 text-opacity-80">(6)</span>
+        </div>
+        <span class="text-gray-800 tracking-tight">Cabane dans les arbres &bull; La Souche Cabane insolite "la Tour Bleue"</span>
+      </div>
+    </div>
+
+    <div>
+      <div class="relative">
+        <span class="absolute top-2 left-2 px-2 py-1 bg-white font-black text-xs text-gray-900 text-opacity-80 rounded shadow-lg">SUPERHOST</span>
+        <svg class="absolute top-2 right-2 w-6 fill-current text-gray-700"xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+        </svg>
+        <img  class="rounded-xl shadow-lg" src="https://a0.muscache.com/im/pictures/0ac86eca-f008-4192-a7a9-3b38bd83b8f3.jpg?im_w=320" alt="">
+      </div>
+      <div>
+        <div class="flex pt-2">
+          <svg class="fill-current text-red-500 w-5"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+          </svg>
+          <span class="px-1 text-gray-800">5,0</span>
+          <span class="text-gray-500 text-opacity-80">(20)</span>
+        </div>
+        <span class="text-gray-800 tracking-tight" >Cabane dans les arbres &bull; Profondeville Le Cocon - La Cabane du Beau Vallon</span>
+      </div>
+    </div>
+
+    <div>
+      <div class="relative">
+        <span class="absolute top-2 left-2 px-2 py-1 bg-white font-black text-xs text-gray-900 text-opacity-80 rounded shadow-lg">SUPERHOST</span>
+        <svg class="absolute top-2 right-2 w-6 fill-current text-gray-700"xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+        </svg>
+        <img  class="rounded-xl shadow-lg" src="https://a0.muscache.com/im/pictures/ea38da34-7082-45a6-895f-dd87019064ee.jpg?im_w=320" alt="">
+      </div>
+      <div>
+        <div class="flex pt-2">
+          <svg class="fill-current text-red-500 w-5"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+          </svg>
+          <span class="px-1 text-gray-800">4,98</span>
+          <span class="text-gray-500 text-opacity-80">(109)</span>
+        </div>
+        <span class="text-gray-800 tracking-tight">Cabane dans les arbres &bull; Le Chemin Cabane de l'Etang Millet</span>
+      </div>
+    </div>
+
+    <div>
+      <div class="relative">
+        <span class="absolute top-2 left-2 px-2 py-1 bg-white font-black text-xs text-gray-900 text-opacity-80 rounded shadow-lg">SUPERHOST</span>
+        <svg class="absolute top-2 right-2 w-6 fill-current text-gray-700"xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+        </svg>
+        <img  class="rounded-xl shadow-lg" src="https://a0.muscache.com/im/pictures/61a9ae85-5e51-4145-b975-b64e8d06da4c.jpg?im_w=320" alt="">
+      </div>
+      <div>
+        <div class="flex pt-2">
+          <svg class="fill-current text-red-500 w-5"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+          </svg>
+          <span class="px-1 text-gray-800">4,83</span>
+          <span class="text-gray-500 text-opacity-80">(154)</span>
+        </div>
+        <span class="text-gray-800 tracking-tight">Cabane dans les arbres &bull; Saint-Nabord L'Etang d'Anty : Cabane de l'explorateur</span>
+      </div>
+    </div>
+
+    <div>
+      <div class="relative">
+        <span class="absolute top-2 left-2 px-2 py-1 bg-white font-black text-xs text-gray-900 text-opacity-80 rounded shadow-lg">SUPERHOST</span>
+        <svg class="absolute top-2 right-2 w-6 fill-current text-gray-700"xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+        </svg>
+        <img  class="rounded-xl shadow-lg" src="https://a0.muscache.com/im/pictures/99a7049a-034d-4633-8e16-369f0e5d3abb.jpg?im_w=320" alt="">
+      </div>
+      <div>
+        <div class="flex pt-2">
+          <svg class="fill-current text-red-500 w-5"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+          </svg>
+          <span class="px-1 text-gray-800">5,0</span>
+          <span class="text-gray-500 text-opacity-80">(36)</span>
+        </div>
+        <span class="text-gray-800 tracking-tight">Cabane dans les arbres &bull; Rimont Cabane dans les bois avec spa privatif en A...</span>
+      </div>
+    </div>
+
+    <div>
+      <div class="relative">
+        <span class="absolute top-2 left-2 px-2 py-1 bg-white font-black text-xs text-gray-900 text-opacity-80 rounded shadow-lg">SUPERHOST</span>
+        <svg class="absolute top-2 right-2 w-6 fill-current text-gray-700"xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+        </svg>
+        <img  class="rounded-xl shadow-lg" src="https://a0.muscache.com/im/pictures/miso/Hosting-43516799/original/52cf9346-ab3c-4a7f-9f91-c8e62ae9b24f.jpeg?im_w=320" alt="">
+      </div>
+      <div>
+        <div class="flex pt-2">
+          <svg class="fill-current text-red-500 w-5"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+          </svg>
+          <span class="px-1 text-gray-800">4,88</span>
+          <span class="text-gray-500 text-opacity-80">(67)</span>
+        </div>
+        <span class="text-gray-800 tracking-tight">Cabane dans les arbres &bull; Erezée Cabane dans les arbres - jaccuzi</span>
+      </div>
+    </div>
+  </main>
+
+
+  <footer class="sticky bottom-0 bg-white flex justify-center pb-2 pt-3 px-4 border-solid border-gray-200 border-t">
+    <div class="px-4 flex flex-col justify-center items-center">
+      <svg class="w-6 fill-current text-red-500" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          viewBox="0 0 373.12 373.12" style="enable-background:new 0 0 373.12 373.12;" xml:space="preserve">
+          <g>
+            <path d="M266.667,234.667h-16.96l-5.867-5.867c20.907-24.213,33.493-55.68,33.493-90.133C277.333,62.08,215.253,0,138.667,0
+              S0,62.08,0,138.667s62.08,138.667,138.667,138.667c34.453,0,65.92-12.587,90.133-33.387l5.867,5.867v16.853L341.333,373.12
+              l31.787-31.787L266.667,234.667z M138.667,234.667c-53.013,0-96-42.987-96-96c0-53.013,42.987-96,96-96c53.013,0,96,42.987,96,96
+              C234.667,191.68,191.68,234.667,138.667,234.667z"/>
+          </g>
+        </svg>
+      <span class="text-xs pt-1 tracking-tight">Explorer</span>
+    </div>
+    <div class="px-4 flex flex-col justify-center items-center">
+      <svg class="w-6 fill-current text-gray-400"xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+      </svg>
+      <span class="text-xs pt-1 text-gray-500 tracking-tight">Enregistrés</span>
+    </div>
+    <div class="px-4 flex flex-col justify-center items-center">
+      <svg class="w-6 fill-current text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+      </svg>
+      <span class="text-xs pt-1 text-gray-500 tracking-tight">Connexion</span>
+    </div>
+  </footer>
+
+
+
+</body>
