tablet format is ok

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
 
-  <header class="hidden md:flex justify-between px-6 py-4">
+  <header class="hidden md:flex justify-between items-center px-6 py-4 shadow-md">
     <div class="flex">
       <img class="inline-block mx-5 w-7" src="images/airbnb_logo.svg" alt="">
       <div class="relative">
-        <input class="px-4 py-2 rounded-3xl font-medium placeholder-black border-solid border-gray-300 border-2 border-opacity-30 focus:outline-none" placeholder="Commencez votre recherche">
+        <input class="px-4 py-3 rounded-3xl font-medium placeholder-black text-sm border-solid border-gray-400 border-2 border-opacity-30 focus:outline-none" placeholder="Commencez votre recherche">
         <div class="absolute inset-y-0 right-0 flex items-center pr-2">
           <svg class="w-8 fill-current text-red-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
             <path d="M9 9a2 2 0 114 0 2 2 0 01-4 0z" />
@@ -24,11 +24,22 @@
       </div>
     </div>
 
-    <div>
-      <span>Devenez hôte</span>
-      logo
-      <button>
-
+    <div class="flex items-center px-4">
+      <span class="text-sm font-medium">Devenez hôte</span>
+      <div class="px-6">
+        <svg class="w-5"xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+        </svg>
+      </div>
+      <button class="flex justify-between items-center px-2 py-1 shadow rounded-3xl border-solid border-gray-400 border-2 border-opacity-30 hover:shadow-xl focus:outline-none">
+        <div class="px-1">
+          <svg class="w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </div>
+        <svg class="w-8 fill-current text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zm-2 4a5 5 0 00-4.546 2.916A5.986 5.986 0 0010 16a5.986 5.986 0 004.546-2.084A5 5 0 0010 11z" clip-rule="evenodd" />
+        </svg>
       </button>
     </div>
   </header>
@@ -53,18 +64,36 @@
 
 
 
-  <section class="py-6 ml-6 mr-14 border-solid border-gray-200 border-b-2">
+  <section class="py-6 ml-6 mr-14 border-solid border-gray-200 border-b-2 md:pt-10">
 
     <span class="text-sm text-gray-700">+ de 300 séjours</span>
     <h1 class="pt-1 text-3xl font-bold text-gray-800">Séjours dans le monde entier</h1>
-    <div class="pt-7 -mx-1">
+
+    <div class="hidden md:flex pt-7 -mr-12">
+      <div class="px-1">
+        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-400 border text-opacity-85">Conditions d'annulations flexibles</button>
+      </div>
+      <div class="px-1">
+        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-800 border-2 text-opacity-85">Logement entier</button>
+      </div>
+      <div class="px-1">
+        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-400 border text-opacity-85">Prix</button>
+      </div>
+      <div class="px-1">
+        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-400 border text-opacity-85">Chambres et lits</button>
+      </div>
+      <div class="px-1">
+        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-800 border-2 text-opacity-85">Plus de filtres &bull; 1</button>
+      </div>
+    </div>
+    <div class="pt-7 -mx-1 md:hidden">
       <button class="px-3 py-1 text-sm text-gray-800 rounded-3xl border-solid border-gray-800 border-2 text-opacity-85">Filtres &bull; 2</button>
     </div>
-    <p class="pt-6 text-gray-500 text-xs tracking-wide">Saisissez les dates et le nombre de voyageurs pour voir le prix total par nuit.</p>
+    <p class="pt-6 text-gray-500 text-xs tracking-wide md:text-sm">Saisissez les dates et le nombre de voyageurs pour voir le prix total par nuit.</p>
 
   </section>
   <div class="pt-1 ml-6 mr-14">
-    <span class="text-sm text-gray-900 text-opacity-80">Classement par ordre de pertinence</span>
+    <span class="text-sm text-gray-900 text-opacity-80 md:text-base">Classement par ordre de pertinence</span>
 
   </div>
 
