add navbar sticky

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- Site original : https://www.airbnb.fr/s/homes?refinement_paths%5B%5D=%2Fhomes&search_type=section_navigation&room_types%5B%5D=Entire%20home%2Fapt&property_type_id%5B%5D=6
  -->
-  <header class="hidden md:flex justify-between items-center px-6 py-4 shadow-md xl:px-14 2xl:px-36">
+  <header class="sticky top-0 z-50 bg-white hidden md:flex justify-between items-center px-6 py-4 shadow-md xl:px-14 2xl:px-36">
     <div class="flex items-center">
 
       <div class="md:w-12 lg:w-80 xl:w-96">
